🐛 FIX: Use .trim.isEmpty for Java 8
We'll be switch to Java 11 in a major release, but for now `String.isBlank()` cannot be used in the code base.